Add Menu and z-index to shapes

--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Inventory Management Simulator</title>
     <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 
 <body class="body">
+    <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/yansi-alvarez/"><img id="linkedin" src="./images/Linkedin.png"></a>
+    <a target="_blank" rel="noopener noreferrer" href=""><img id="personal-site" src="./images/PersonalSite.png"></a>
+    <a target="_blank" rel="noopener noreferrer" href="https://github.com/Yamithorn"><img id="github" src="./images/GitHub.png"></a>
+    <a target="_blank" rel="noopener noreferrer" href="https://angel.co/yansi-alvarez"><img id="angel-list" src="./images/AngelList.png"></a>
+    <span class="author">Yansi Alvarez © 2019</span>
+        
     <canvas id="canvas-field">
-        <div class="board"></div>
     </canvas>
     <script src="./bundle.js" ></script>
 </body>
