--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body class="body">
-    <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/yansi-alvarez/"><img id="linkedin" src="./images/Linkedin.png"></a>
+    <!-- <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/yansi-alvarez/"><img id="linkedin" src="./images/Linkedin.png"></a>
     <a target="_blank" rel="noopener noreferrer" href=""><img id="personal-site" src="./images/PersonalSite.png"></a>
     <a target="_blank" rel="noopener noreferrer" href="https://github.com/Yamithorn"><img id="github" src="./images/GitHub.png"></a>
-    <a target="_blank" rel="noopener noreferrer" href="https://angel.co/yansi-alvarez"><img id="angel-list" src="./images/AngelList.png"></a>
+    <a target="_blank" rel="noopener noreferrer" href="https://angel.co/yansi-alvarez"><img id="angel-list" src="./images/AngelList.png"></a> -->
     <span class="author">Yansi Alvarez © 2019</span>
         
     <canvas id="canvas-field">
